external-crates/move/crates/move-compiler/tests/move_2024/extensions/invalid_fn_redefinition@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/development/extensions/invalid_fn_redefinition.move:7:9
  │
2 │     fun f(): u64 { 0 }
  │         - Alias previously defined here
  ·
7 │     fun f(): u64 { 1 }
  │         ^ Duplicate module member or alias 'f'. Top level names in a namespace must be unique
